about and loader

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -7,6 +7,11 @@
   padding: 0;
   box-sizing: border-box;
 }
+
+::-webkit-scrollbar{
+  display: none;
+}
+
 html,
 body {
   width: 100%;
@@ -75,7 +80,7 @@ body {
      transform: translateX(0);
    }
    100% {
-    transform: translateX(calc(-100% - 4px));
+    transform: translateX(-100%);
   }
  }
 
@@ -125,3 +130,4 @@ body {
 .swiper-button-next:after{
   display: none;
 } */
+
