--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -6,6 +6,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  user-select: none;
 }
 
 ::-webkit-scrollbar {
@@ -69,12 +70,10 @@ body {
 
 .mq-card h6 {
   transition: all ease 0.3s;
-  transition-delay: 0.3s;
 }
 
 .mq-card h3 {
   transition: all ease 0.3s;
-  transition-delay: 0.3s;
 }
 
 .mq-card:hover h6 {
@@ -117,12 +116,9 @@ body {
   justify-content: center;
   align-items: center;
 }
-
+/* 
 .swiper-button-prev {
   position: absolute;
-  /* bottom: 0% !important; */
-  /* left: 45% !important; */
-  /* top: auto !important; */
   width: 3vw !important;
   height: 3vw !important;
   border-radius: 50%;
@@ -137,9 +133,6 @@ body {
 
 .swiper-button-next {
   position: absolute;
-  /* bottom: 0% !important; */
-  /* top: auto !important; */
-  /* right: 45% !important; */
   width: 3vw !important;
   height: 3vw !important;
   border-radius: 50%;
@@ -152,6 +145,10 @@ body {
 }
 .swiper-button-next:after {
   display: none;
+} */
+
+.swiper-button-next:after , .swiper-button-prev::after {
+  opacity: .6;
 }
 
 .product-wraper:hover .product-txt {
