--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -163,3 +163,10 @@ body {
   background-color: #58636e;
   color: #fff;
 }
+
+
+@media (max-width: 639px){
+  .contact-wrapper{
+    clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
+  }
+}
