--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -66,7 +66,7 @@ body {
   animation-timing-function: linear;
   animation-duration: 30s;
 }
-
+/* 
 .mq-card h6 {
   transition: all ease 0.3s;
 }
@@ -82,7 +82,8 @@ body {
 .mq-card:hover h3 {
   opacity: 0;
   transition-delay: 0s;
-}
+} */
+
 .product-txt:hover .num-c {
   background-color: #fff;
 }
@@ -158,7 +159,7 @@ body {
 }
 
 .product-wraper:hover .product-txt {
-  width: 80%;
+  width: 88%;
   background-color: #58636e;
   color: #fff;
 }
