--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -53,12 +53,9 @@ body {
 }
 
 .contact-wrapper {
-  clip-path: polygon(20% 5%, 80% 5%, 80% 95%, 20% 95%);
-  transition: all ease 0.5s;
-}
-.contact-wrapper:hover {
   clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
 }
+
 
 .product-marquee {
   animation-name: slider;
@@ -84,15 +81,32 @@ body {
   transition-delay: 0s;
 } */
 
+.num-c {
+  transition: all ease .3s;
+}
+.num-c:hover{
+  width: 90px;
+  height: 30px;
+}
 .product-txt:hover .num-c {
   background-color: #fff;
 }
+
+.num-c:hover p{
+  color: black;
+  opacity: 1;
+}
+.num-c:hover i{
+  color: white !important;
+}
+
 .product-txt:hover i{
   color: black;
 }
 .product-txt:hover i {
   opacity: 1;
 }
+
 
 @keyframes slider {
   0% {
@@ -178,3 +192,10 @@ body {
     color: #fff;
   }
 }
+
+
+
+
+
+
+
